src/stylesheets/abilities-section.scss
@font-face{
  font-family: iran-yekan;
  src: url(../assets/fonts/IRANYekan.ttf);
}

#abilities-title{
  color: #FF6200;
  font-style: normal;
  font-weight: normal;
  font-size: 1.8vw;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: iran-yekan, serif;
}

#abilities{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#side{
  margin-top: 50vh;
  position: absolute;
  height:80.55555555555556vh;
  width:99.5vw;
  display: flex;
  justify-content: end;
  flex-direction: row;
  align-items: end;
}
#side-main{
  height:85vh;
  width:18vw;
}

.ability-group{
  display: flex;
  justify-content: center;
  align-items: end;
  flex-direction: column;
  height:33vh;
  width:20vw;
}

.black-text{
  direction: rtl;
  color: black;
  background-color: #FF6200;
  font-family: iran-yekan, serif;
  font-style: normal;
  font-weight: bold;
  font-size: 1.1vw;
}

.white-text{
  color: white;
  direction: rtl;
  font-family: iran-yekan, serif;
  font-style: normal;
  font-weight: normal;
  font-size: 1vw;
}

#abilities-wrapper{
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width:55vw;
}

.ability-icon{
  height:6.944444444444445vh;
  width:3.90625vw;
}

